added intersection observer

--- a/beef-heart-meat-halal.html
+++ b/beef-heart-meat-halal.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-       <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+       <h1 class="h1 fade-up">Говяжье сердце</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-heart-meat.jpg" alt="beef-heart-meat" class="largeImg"
                   id="largeImg" title="Говяжье сердце">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжье сердце</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -189,7 +189,7 @@
         <hr class="hr_thumb_beef_heart_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Тайский салат из говядины</h3>
               </div>
@@ -215,7 +215,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте масло в большой сковороде на сильном огне. Обжаривайте говядину по 3-4 минуты с каждой
                     стороны до готовности по вкусу. Отложите в сторону и накройте, чтобы
                     согреться.
@@ -223,12 +223,12 @@
                   <p>Для приготовления заправки смешайте все ингредиенты в кувшине. Отложите.
                     Тем временем в большой миске смешайте листья салата, зелень, ростки, помидоры, огурец и лук.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Тонко нарежьте говядину. Полить салат заправкой непосредственно перед подачей на стол. Приятного
                     аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="ground-beef-meat-halal-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -237,7 +237,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Сырное и легкое, приготовленное на медленном огне рагу с говядиной и клецками, а также четыре порции
