--- a/beef-knuckle-meat-in-pokrov.html
+++ b/beef-knuckle-meat-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-              <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+              <h1 class="h1 fade-up">Рулька Говяжья</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-knuckle-meat.jpeg" alt="beef-knuckle-halal-meat" class="largeImg"
                   id="largeImg" title="Рулька Говяжья">
@@ -157,10 +157,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Рулька Говяжья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -195,10 +195,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Хрустящие кокосовые блинчики с говядиной</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Смешайте рисовую муку, кукурузный крахмал и куркуму в миске. Влейте кокосовое молоко и 375 мл (11/2)
                     воды. Взбейте до
                     однородности. Накройте и оставьте на 1 час (или приготовьте заранее и поставьте в холодильник на
@@ -234,14 +234,14 @@
                     кориандр. Сверните
                     блин, чтобы покрыть начинку, затем переложите на тарелку.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Повторите то же самое с оставшейся смесью для блинов (перемешивайте тесто между партиями),
                     говядиной, ростками фасоли,
                     морковью и кориандром, чтобы в общей сложности получилось 8 блинов.
                     Приятного аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="steak-on-the-bone-halal-meat.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -252,7 +252,7 @@
             <div class="colHolder one">
               <ul class="ul_with_text">
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Приготовьте эти легкие Хрустящие кокосовые блинчики с говядиной для простого ужина в середине
                     недели. Мясная начинка
                     также отлично подходит
