--- a/beef-liver-meat-in-pokrov.html
+++ b/beef-liver-meat-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Говяжья печень</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/liver-beef-meat.jpg" alt="liver-beef-meat" class="largeImg"
                   id="largeImg" title="Говяжья печень">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжья печень</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -190,13 +190,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Хрустящая говядина чили</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 20 минут</li>
                     <li>Приготовление: 10 минут </li>
@@ -217,7 +217,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Смешайте говядину, чеснок и 1 столовую ложку соевого соуса в миске. Отложите на 10 минут для
                     маринования. Тем временем
                     смешайте сладкий соус чили, томатный соус, уксус и оставшийся соевый соус в кувшине.
@@ -231,7 +231,7 @@
                     Переложите на тарелку, застеленную бумажным полотенцем, чтобы дать стечь. Повторите с оставшейся
                     говядиной.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте дополнительное масло в сковороде на сильном огне. Добавьте стручковый перец и бледные части
                     лука-шалота.
                     Жарить, помешивая, 2-3 минуты или пока слегка не размягчится. Добавьте смесь сладкого соуса чили,
@@ -242,7 +242,7 @@
                     аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="rabbit-fresh-meat-halal.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -253,7 +253,7 @@
             <div class="colHolder one">
               <ul class="ul_with_text">
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Хрустящий, нежный, тонко нарезанный маринованный стейк из говядины в кисло-сладком соусе — чего еще
                     желать для
                     обеда в середине недели?!
