--- a/beef-steak-meat-halal.html
+++ b/beef-steak-meat-halal.html
@@ -112,8 +112,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Говяжий Стейк</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,12 +132,12 @@
     <!-- main -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
-        <section class="container_gallery">
-          <div class=" h1_title">
+        <section class="container_gallery ">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/steak_beef_halal_meat1.jpg" alt="steak_beef_halal_meat" class="largeImg"
                   id="largeImg" title="Говяжий Стейк На Кости">
@@ -158,12 +158,12 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжий Стейк На Кости</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
-                  <p class="pStyle">
+                  <p class="pStyle fade-up">
                     Наша говядина выращена на траве и на фермах в России.
                     100% халяль!
                     Свежее никогда не замороженное мясо!
@@ -195,7 +195,7 @@
         <hr class="hr_thumb_beef_steak_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Бефстроганов суп</h3>
               </div>
@@ -221,7 +221,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Доведите бульон и 3 стакана воды до кипения в средней кастрюле на сильном огне. Добавьте белые
                     грибы. Отложите.
                   </p>
@@ -231,7 +231,7 @@
                     всех сторон. Переложить
                     на тарелку. Аккуратно протрите противень бумажным полотенцем.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 2 столовые ложки оставшегося масла в сковороде на сильном огне. Добавьте лук, тимьян и
                     лавровый лист.
                     Приправить солью и перцем. Готовьте, периодически помешивая, в течение 6 минут или до мягкости.
@@ -245,14 +245,14 @@
                     Готовьте, периодически
                     помешивая, в течение 5 минут или до золотистого цвета.
                   </p>
-                  <p>Используя щипцы, переложите говядину на доску. Используя 2 вилки, измельчите мясо. Удалите и
+                  <p class="fade-up">Используя щипцы, переложите говядину на доску. Используя 2 вилки, измельчите мясо. Удалите и
                     выбросьте травы. Вернуть
                     говядину на сковороду. Доводить до кипения. Добавьте шампиньоны и макароны. Варить, частично накрыв,
                     в течение 15 минут
                     или пока макароны не станут мягкими. Добавьте сливки. Перемешайте. Подавайте суп, посыпав зеленью.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="pulp-on-the-bone-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -261,7 +261,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Классический рецепт, и теперь вы можете наслаждаться бефстроганов в виде супа!
