--- a/beef-tongue-meat.html
+++ b/beef-tongue-meat.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Говяжий язык</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-tongue-meat.jpg" alt="beef-tongue-meat" class="largeImg"
                   id="largeImg" title="Говяжий язык">
@@ -155,10 +155,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжий язык</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -190,7 +190,7 @@
         <hr class="hr_thumb_beef_tongue_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Шашлык из говядины с лепешками песто</h3>
               </div>
@@ -217,7 +217,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Равномерно нанизать говядину на 12 металлических или пропитанных бамбуком шампуров. Смажьте ¼
                     стакана (65 г) песто. Разогрейте гриль-барбекю или мангал на высокой мощности. Готовьте стручковый
                     перец кожицей вниз в течение 5 минут или до
@@ -226,7 +226,7 @@
                   <p>Тем временем обжарьте кабачки и лук на гриле в течение 4-5 минут или до мягкости. Переложите в
                     отдельную посуду. Нарежьте стручковый перец полосками. Добавить к кабачковой смеси. Перемешайте.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Поместите муку и 1 стакан (280 г) йогурта в большую миску. Используйте свои руки, чтобы собрать
                     тесто вместе.
                     Переверните на посыпанную мукой поверхность и аккуратно вымесите до однородности. Добавьте 2
@@ -237,13 +237,13 @@
                     готовности. Переложить
                     на тарелку.
                   </p>
-                  <p>Готовьте шашлык на гриле, переворачивая, в течение 5 минут или до желаемой степени готовности.
+                  <p class="fade-up">Готовьте шашлык на гриле, переворачивая, в течение 5 минут или до желаемой степени готовности.
                     Смешайте оставшийся йогурт и 1 столовую ложку песто в миске. Разложить по лепешкам. Сверху выложите
                     овощи, шпинат и
                     шпажки. Добавьте масло к оставшемуся соусу песто и сбрызните им шампуры. Приятного
                     аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="rear-lamb-leg-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -254,7 +254,7 @@
             <div class="colHolder one">
               <ul class="ul_with_text">
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Легко на ужин, легко на обед. Эти шашлычки из говядины с лепешками песто — просто легкий вариант
                     еды, когда у вас мало
                     времени.
