--- a/beef_pulp_meat_in_pokrov.html
+++ b/beef_pulp_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+          <h1 class="h1 fade-up">Мякоть Говяжья</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class="h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-pulp-meat.jpg" alt="beef-pulp-meat" class="largeImg" id="largeImg"
                   title="Мякоть Говяжья">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Мякоть Говяжья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -194,13 +194,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow"> Домашняя Тушёнка из Говядины </h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>5-6 литровых банок</li>
                     <li>Подготовка: 30 минут</li>
                     <li>Приготовление: 8 часов</li>
@@ -215,7 +215,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Порежьте говядину на нужные куски. Это могут быть брусочки для жаркого, кубики для первых блюд,
                     крупные куски, если
                     хотите использовать как мясо на закуски. Нарезанное мясо пересыпьте солью, специями. В данном случае
@@ -234,7 +234,7 @@
                     Прикрываем банки крышками и
                     можно начинать тушить.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Томить тушенку удобно в духовке или на водяной бане. Если банок больше трех, то целесообразнее это
                     сделать в духовом
                     шкафу. На противень высыпать пачки соли и утрамбовать ее. Эта прослойка меду металлическим противнем
@@ -253,7 +253,7 @@
                     течение 6-8 недель.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="pulp_lamb_meat_halal_to_buy_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -262,7 +262,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Немного специй, терпения - и отличное блюдо про запас готово!
