--- a/beef_tenderloin_meat_in_pokrov.html
+++ b/beef_tenderloin_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+          <h1 class="h1 fade-up">Говяжья вырезка</h1>
         <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
              <h2 class="h2">Говядина для здоровья</h1>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-tenderloin-meat.webp" alt="beef-tenderloin-meat" class="largeImg"
                   id="largeImg" title="Говяжья вырезка">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжья вырезка</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -194,13 +194,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Буррито с говядиной</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 15 минут</li>
                     <li>Приготовление: 30 минут </li>
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте масло в большой кастрюле — идеально подойдет кастрюля. Обжарьте лук 8 минут, затем
                     добавьте чеснок, специи и
                     орегано и готовьте 1 минуту. Покрошить фарш и жарить в течение 5 минут, помешивая, пока не
@@ -232,7 +232,7 @@
                     небольшим
                     количеством воды или заморозить на 6 месяцев.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Чтобы приготовить буррито, разогрейте лепешки, следуя инструкциям на упаковке. Выложите немного риса
                     и соуса из говядины
                     вдоль каждой лепешки и разбросайте по своему выбору. Сложите концы и сверните, чтобы запечатать.
@@ -241,7 +241,7 @@
                     Приятного аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="veal-pulp-meat-to-buy-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -250,7 +250,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Приготовьте эти легкие буррито с говядиной для простого ужина в середине недели. Мясная начинка
