--- a/front-leg-of-lamb-halal-meat-in-pokrov.html
+++ b/front-leg-of-lamb-halal-meat-in-pokrov.html
@@ -112,8 +112,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Баранья нога</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -133,11 +133,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
              <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/front-leg-lamb-meat1.jpeg" alt="front-leg-lamb-meat" class="largeImg"
                   id="largeImg" title="Баранья передняя нога">
@@ -158,10 +158,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Баранья передняя нога</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -194,13 +194,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Дукка из баранины с кускусом</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порций</li>
                     <li>Подготовка: 10 минут</li>
                     <li>Приготовление: чуть больше 20 минут </li>
@@ -218,7 +218,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 1 столовую ложку масла в кастрюле на среднем огне. Добавьте лук и готовьте, помешивая, в
                     течение 4 минут или до
                     мягкости. Добавьте фарш и чеснок и готовьте, периодически помешивая, чтобы разбить комки, в течение
@@ -229,7 +229,7 @@
                     1/4 стакана листьев
                     базилика и добавьте в соус болоньезе.
                   </p>
-                  <p>Тем временем отварите спагетти в кастрюле с подсоленной кипящей водой, следуя указаниям на упаковке
+                  <p class="fade-up">Тем временем отварите спагетти в кастрюле с подсоленной кипящей водой, следуя указаниям на упаковке
                     (около 10 минут).
                     Хорошо слейте воду. Нагрейте оставшееся масло в сковороде на сильном огне. Готовьте оставшиеся
                     листья базилика в течение
@@ -238,7 +238,7 @@
                     тарелкам. Сверху выложите болоньезе из телятины и посыпьте пармезаном и жареным базиликом. Приятного
                     аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-steak-meat-halal.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -247,7 +247,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Нежность баранины делает ее идеальным мясом для блюда с кускусом.
