--- a/ground-beef-meat-halal-in-pokrov.html
+++ b/ground-beef-meat-halal-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-        <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+        <h1 class="h1 fade-up">Фарш Говяжий</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/ground-beef-meat.jpg" alt="ground-beef-meat" class="largeImg"
                   id="largeImg" title="Фарш Говяжий">
@@ -155,10 +155,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Фарш Говяжий</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -189,7 +189,7 @@
         <hr class="hr_thumb_ground_beef_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Японское карри из говядины</h3>
               </div>
@@ -216,7 +216,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 1 столовую ложку масла в большой огнеупорной кастрюле на среднем огне. Добавьте говядину и
                     жарьте в 2 приема,
                     время от времени переворачивая, в течение 3-4 минут или пока она не подрумянится. Переложить на
@@ -234,7 +234,7 @@
                     морковь. Готовьте под
                     крышкой еще 1 час или пока говядина не станет очень мягкой.
                   </p>
-                  <p>Тем временем, чтобы приготовить соус карри, растопите сливочное масло в небольшой сковороде на
+                  <p class="fade-up">Тем временем, чтобы приготовить соус карри, растопите сливочное масло в небольшой сковороде на
                     среднем огне. Добавьте
                     муку и готовьте, помешивая, 2 минуты. Добавьте порошок карри и готовьте, помешивая до появления
                     аромата.Добавьте соль/перец по вкусу в говядину, хорошо перемешав. Варите, помешивая, на медленном
@@ -242,7 +242,7 @@
                     зеленым луком-шалотом. Приятного
                     аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="veal-steak-meat-halal.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -251,7 +251,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Нежность говядины делает ее идеальным мясом для японского кари.Это вкусное, сытное блюдо, которое
