--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+          <h1 class="h1 fade-up">Мясо-Халяль</h1>
           <p class="text_dark">
             Телятина, говядина, баранина, курица, индейка - выращиваются на
             местных фермах специально для халяльных пастбищ, которые мы
             тщательно проверяем и чьим методам выращивания животных доверяем!
           </p>
-          <a href="#meat" class="scroll-link btn btn-white marginB"
+          <a href="#meat" class="scroll-link btn btn-white marginB fade-up"
             >Сейчас в продаже</a
           >
         </div>
@@ -182,7 +182,7 @@
       <!-- about -->
       <section id="about" class="section layer_over">
         <div class="layer_over">
-          <div class="title">
+          <div class="title fade-up">
             <h2>О <span>Нас</span></h2>
           </div>
           <section class="section-center layer_over2">
@@ -284,14 +284,14 @@
 
       <!-- reviews -->
       <section id="reviews" class="section vh_100 margin_bottom">
-        <div class="title margin_bottom">
+        <div class="title margin_bottom fade-up">
           <h2>Мнения<span> о нас</span></h2>
         </div>
 
         <div class="main_reviews">
           <section class="container_reviews">
             <!-- title -->
-            <div class="title_reviews">
+            <div class="title_reviews fade-up">
               <h2>Отзывы клиентов</h2>
               <div class="underline_reviews"></div>
               <!-- review -->
@@ -330,7 +330,7 @@
 
       <!-- delivery -->
       <section id="delivery_section" class="section layer_over">
-        <div class="title">
+        <div class="title fade-up">
           <h2>Наша <span>доставка</span></h2>
         </div>
         <section class="section-center layer_over2">
