--- a/kurdyuk-lamb-meat-in-pokrov.html
+++ b/kurdyuk-lamb-meat-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-               <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+               <h1 class="h1 fade-up">Курдюк бараний</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/kurdyuk-lamb-meat.jpg" alt="kurdyuk-lamb-meat" class="largeImg"
                   id="largeImg" title="Курдюк бараний">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Курдюк бараний</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -190,10 +190,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Сытный суп из баранины и овощей</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -213,7 +213,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте масло в большой глубокой кастрюле на среднем огне. Готовьте баранину в 2 приема, время от
                     времени
                     переворачивая, в течение 5 минут или пока она полностью не подрумянится. Переложить на тарелку.
@@ -224,12 +224,12 @@
                     Уменьшите огонь до
                     минимума. Накройте крышкой и тушите 2 часа или пока баранина не станет мягкой.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Посыпьте суп петрушкой и подавайте с хлебом.Приятного
                     аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-heart-meat-halal.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -238,7 +238,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Согрейтесь изнутри этим вкусным сытным супом из баранины и овощей, который не только наполнит дом
