--- a/lamb_back_meat.html
+++ b/lamb_back_meat.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-        <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+        <h1 class="h1 fade-up">Баранья спинка</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/lamb-back-meat.webp" alt="lamb-back-meat" class="largeImg" id="largeImg"
                   title="Баранья спинка">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Баранья спинка</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -167,7 +167,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Баранина — это мясо, которое едят во всем мире, потому что его насыщенный вкус прекрасно сочетается
                     со специями и
                     другими ароматными ингредиентами. Это универсальное мясо с множеством различных нарезок, подходящих
@@ -175,7 +175,7 @@
                     приготовления.
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="https://api.whatsapp.com/send?phone=79607367389&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%A3%20%D0%BC%D0%B5%D0%BD%D1%8F%20%D0%B5%D1%81%D1%82%D1%8C%20%D0%B2%D0%BE%D0%BF%D1%80%D0%BE%D1%81%20%D0%BF%D0%BE%20%D0%BF%D0%BE%D0%B2%D0%BE%D0%B4%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%20%D0%BC%D1%8F%D1%81%D0%B0."
                     class="a_link_button_light1" title="Сделать заказ прямо сейчас" target="_blank"><button
                       class="glow-on-hover" type="button">Заказать
@@ -189,11 +189,11 @@
         <hr class="hr_thumb">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
-              <div class=" h3_title">
+            <div class="colHolder">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Простой рецепт жареной бараньей ноги с соусом</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -214,7 +214,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 200°С/180°С. Выложите овощи, чеснок и розмарин на
                     противень и добавьте
                     немного масла. Сверху положите баранину, натрите оставшимся маслом и щедро приправьте солью и
@@ -238,7 +238,7 @@
                     подавайте с соусом.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -247,7 +247,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Вот наш базовый рецепт жареной бараньей ноги с соусом, однако вы можете выбрать другие приправы по
