--- a/lamb_loin_meat_in_pokrov.html
+++ b/lamb_loin_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Корейка Баранья</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
           <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/lamb_loin_meat.jpg" alt="lamb_loin_meat" class="largeImg" id="largeImg"
                   title="Корейка Баранья">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Корейка Баранья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -190,13 +190,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Тажин из баранины</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 15 минут</li>
                     <li>Приготовление: 1час 30 минут </li>
@@ -215,7 +215,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 180C/160C конвекция/газ. Разогрейте масло в кастрюле и обжарьте баранину со
                     всех сторон. Выложите баранину на тарелку, затем добавьте лук и морковь и готовьте 2-3 минуты до
                     золотистого цвета. Добавьте чеснок и готовьте еще 1 мин. Добавьте специи и помидоры и приправьте.
@@ -227,7 +227,7 @@
                     и зеленью, с кускусом или рисом.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="lamb_back_meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -236,7 +236,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Этот фруктовый тажин из баранины в марокканском стиле полон вкуса и гарантированно удовлетворит
