--- a/minced_meat_lamb_with_beef_meat_halal_in_pokrov.html
+++ b/minced_meat_lamb_with_beef_meat_halal_in_pokrov.html
@@ -112,8 +112,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+          <h1 class="h1 fade-up">Мясо-Халяль</h1>
           <p class="text_dark">
             Говядина и баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый,
             мягкий вкус.
@@ -134,11 +134,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
          <h2 class="h2">Мясо-Халяль для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/lamb-mince-meat2.jpg" alt="lamb-mince-meat" class="largeImg"
                   id="largeImg" title="Фарш из баранины и говядины">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Фарш из баранины и говядины</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина и баранина выращена на траве и на фермах в России.
@@ -192,10 +192,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Пирог с бараниной и серебряной свеклой по-гречески</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 2 чайные ложки масла в большой кастрюле на среднем огне. Готовьте баранину, время от
                     времени переворачивая, в
                     течение 5 минут или пока она полностью не подрумянится. Добавьте лук и готовьте, помешивая, в
@@ -241,7 +241,7 @@
                     Смешайте серебряную свеклу, рикотту, сыр фета, зеленый лук, яйцо, половину укропа и половину мяты в
                     большой миске.
                   </p>
-                  <p>Разогрейте духовку до 180°C. Положите листы теста на чистую рабочую поверхность и накройте влажным
+                  <p class="fade-up">Разогрейте духовку до 180°C. Положите листы теста на чистую рабочую поверхность и накройте влажным
                     кухонным полотенцем.
                     Смажьте 1 лист растопленным сливочным маслом. Сверху накройте еще одним листом. Продолжайте
                     выкладывать слоями масло и
@@ -250,7 +250,7 @@
                     Выложите смесь серебряной свеклы на тесто в кастрюле. Разгладьте поверхность. Сверху выложите смесь
                     из баранины. Сложите
                     выступающее тесто сверху.</p>
-                  <p>Положите 1 из оставшихся листов теста на чистую поверхность. Сверху накройте еще одним листом
+                  <p class="fade-up">Положите 1 из оставшихся листов теста на чистую поверхность. Сверху накройте еще одним листом
                     теста. Смазать маслом.
                     Продолжайте выкладывать оставшееся тесто и масло. Выложите на смесь из баранины и заправьте края в
                     кастрюлю. Посыпать
@@ -259,7 +259,7 @@
                     с укропной смесью. Приятного
                     аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef_ribs_halal_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -268,7 +268,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Расширьте свой репертуар пирогов этим сочным пирогом из баранины и свеклы в греческом стиле.
