--- a/pulp_lamb_meat_halal_to_buy_in_pokrov.html
+++ b/pulp_lamb_meat_halal_to_buy_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Мякоть Баранья</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
         <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/lamb_pulp_meat.jpg" alt="lamb_pulp_meat" class="largeImg" id="largeImg"
                   title="Мякоть Баранья">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Мякоть Баранья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -190,10 +190,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Жаркое из баранины с хрустящим картофелем</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -216,7 +216,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 150°С (130°С с конвекцией). В кухонном комбайне мелко нарежьте чеснок, листья
                     розмарина, семена
                     фенхеля, хлопья чили, если используете, масло, 1 столовую ложку хлопьев морской соли и 2 чайные
@@ -239,7 +239,7 @@
                     Выложить в один слой
                     на противень, застеленный бумажным полотенцем. Отложите до полного остывания.
                   </p>
-                  <p>В большую сухую кастрюлю налейте достаточное количество растительного масла, чтобы оно было на одну
+                  <p class="fade-up">В большую сухую кастрюлю налейте достаточное количество растительного масла, чтобы оно было на одну
                     треть. Нагрейте на
                     среднем огне, пока масло не достигнет 150°C. Добавьте картофель и готовьте, периодически помешивая,
                     в течение 8-10 минут
@@ -252,7 +252,7 @@
                     жаропрочную миску. Приправьте хлопьями морской соли и черным перцем и перемешайте.
                     Толсто нарежьте баранину и подавайте с хрустящим картофелем.Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -261,7 +261,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Вот наш базовый рецепт жареной бараньей ноги с соусом, однако вы можете выбрать другие приправы по
