--- a/rabbit-fresh-meat-halal.html
+++ b/rabbit-fresh-meat-halal.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+          <h1 class="h1 fade-up">Кролик домашний</h1>
           <p class="text_dark">
             Кролик травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наш кролик
@@ -130,11 +130,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
                <h2 class="h2">Кролик для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/rabbit-meat.webp" alt="rabbit-meat" class="largeImg" id="largeImg"
                   title="Кролик домашний">
@@ -152,10 +152,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Кролик домашний</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наш кролик выращен на траве и на фермах в России.
@@ -186,13 +186,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Кролик с панчеттой и горчицей</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>6 порций</li>
                     <li>Подготовка: 30 минут</li>
                     <li>Приготовление: 1 часа 30 минут </li>
@@ -212,7 +212,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 170С. Приправить кролика солью и перцем. Нагрейте 2 столовые ложки оливкового
                     масла в большой огнеупорной кастрюле на среднем
                     огне. Запечатайте кролика партиями в течение 3-4 минут, пока он не подрумянится со всех сторон.
@@ -226,7 +226,7 @@
                     пока мясо не станет мягким и не начнет
                     отставать от костей.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Тем временем для поленты доведите куриный бульон или воду до кипения в большой кастрюле на среднем
                     огне. Уменьшите огонь
                     до очень слабого, добавьте молоко, затем медленной, постоянной струей влейте поленту, постоянно
@@ -237,7 +237,7 @@
                     охладите в течение 1 часа
                     или до затвердевания.
                   </p>
-                  <p>Поставьте сковороду-гриль на сильный огонь. Нарежьте поленту на шестнадцать кусочков размером 4 см
+                  <p class="fade-up">Поставьте сковороду-гриль на сильный огонь. Нарежьте поленту на шестнадцать кусочков размером 4 см
                     х 10 см, затем
                     смажьте обе стороны оставшимся маслом. Готовьте по 3 минуты с каждой стороны, пока они не
                     подрумянятся и не прогреются.
@@ -247,7 +247,7 @@
                     полейте соусом, затем посыпьте петрушкой и подавайте.Приятного
                     аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="chicken-meat-halal-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -256,7 +256,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Горчица и панчетта — это смелые вкусы, которые становятся мягкими по мере приготовления и дополняют
