--- a/rear-lamb-leg-meat.html
+++ b/rear-lamb-leg-meat.html
@@ -112,8 +112,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-        <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+        <h1 class="h1 fade-up">Баранья Нога</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -133,11 +133,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/back-leg-of-lamb-meat2.jpg" alt="back-leg-lamb-meat" class="largeImg"
                   id="largeImg" title="Задняя Баранья Нога">
@@ -157,10 +157,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Задняя Баранья Нога</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -193,13 +193,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Средиземноморская запеканка из баранины</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 20 минут</li>
                     <li>Приготовление: 50 минут </li>
@@ -218,7 +218,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 220С/200С с конвекцией. Нагрейте масло в большом жаростойком противне на
                     сильном огне. Готовьте баранину по 2 минуты с каждой стороны или пока
                     она хорошо не подрумянится. Снимите с огня. Переложить баранину на тарелку. Накройте фольгой, чтобы
@@ -228,7 +228,7 @@
                     Запекайте 15 минут
                     или пока лук не станет почти мягким.
                   </p>
-                  <p>Добавьте паприку, дольки лимона и чеснок. Перемешайте. Приправить солью и перцем. Сверху украсьте
+                  <p class="fade-up">Добавьте паприку, дольки лимона и чеснок. Перемешайте. Приправить солью и перцем. Сверху украсьте
                     помидорами. Запекайте
                     15 минут или пока овощи не станут мягкими. Сверху разложить отбивные. Посыпать оливками и сыром
                     фета. Запекайте еще
@@ -236,7 +236,7 @@
                     Посыпать дополнительно
                     тимьяном. Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-goulash-halal-meat.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -245,7 +245,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Эта легкая средиземноморская запеканка из баранины готовится всего за 40 минут и является отличным
