--- a/steak-on-the-bone-halal-meat.html
+++ b/steak-on-the-bone-halal-meat.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-             <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+             <h1 class="h1 fade-up">Говяжий стейк</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/cuts-of-beef-meat.png" alt="cuts-of-beef-meat" class="largeImg"
                   id="largeImg" title="Говяжий стейк">
@@ -157,10 +157,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Говяжий стейк</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -194,11 +194,11 @@
         <hr class="hr_thumb_beef_steak-meat-halal">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
-              <div class=" h3_title">
+            <div class="colHolder">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Вкусная запеканка из говяжьего рагу</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -220,14 +220,14 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте духовку до 180С/160С с конвекцией.
                   </p>
                   <p>Нагрейте половину масла в большой жаропрочной сковороде с толстым дном на среднем огне. Готовьте
                     говядину двумя заходами
                     в течение 5–6 минут или пока она полностью не подрумянится. Переложите в миску.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте оставшееся масло в сковороде на среднем огне. Добавьте лук, бекон, морковь, сельдерей и
                     чеснок. Готовьте,
                     помешивая, в течение 8 минут или пока овощи не станут мягкими. Добавьте вино. Готовьте, помешивая, в
@@ -240,7 +240,7 @@
                     аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="pulp-on-the-bone-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -250,7 +250,7 @@
             </div>
             <div class="colHolder one">
               <ul class="ul_with_text">
-                <li>
+                <li class="fade-up">
                   <p>
                     Сырное и легкое, приготовленное на медленном огне рагу с говядиной и клецками, а также четыре порции
                     овощей — идеальный
