--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -85,14 +85,14 @@
     <!-- preloader -->
     <!-- main -->
     <main class="main">
-      <div class="title_container">
+      <div class="title_container fade-up">
         <h1 class="h1 privacy">Политика обработки персональных данных</h1>
       </div>
       <section class="main_section ">
-        <article class="main_article bg_mask_privacy">
+        <article class="main_article bg_mask_privacy fade-up">
 
           <h4>1. ОПРЕДЕЛЕНИЕ ПОНЯТИЙ</h4>
-          <p>1.1. "Закон" означает Федеральный закон Российской Федерации "О
+          <p class="fade-up">1.1. "Закон" означает Федеральный закон Российской Федерации "О
             персональных данных" со всеми изменениями и дополнениями, а также иные
             законодательные акты Российской Федерации.
             1.2. "Сайт" означает информационную единицу в Интернете, ресурс из веб-
@@ -128,8 +128,8 @@
             2/10
             а также качества размещенного в них контента.
           </p>
-          <h4>2. ОТНОШЕНИЯ, НА КОТОРЫЕ РАСПРОСТРАНЯЕТСЯ ПОЛИТИКА</h4>
-          <p>2.1.<bold> Общие положения:</bold>
+          <h4 class="fade-up">2. ОТНОШЕНИЯ, НА КОТОРЫЕ РАСПРОСТРАНЯЕТСЯ ПОЛИТИКА</h4>
+          <p class="fade-up">2.1.<bold> Общие положения:</bold>
             Данная Политика используется и применима исключительно к Персональным
             данным, получаемым от Пользователя в связи с использованием им Сайта.
             Положения данной Политики направлены на:
@@ -151,8 +151,8 @@
             Если Пользователь не согласен с условиями Политики и/или отдельные
             условия Политики ему не понятны, в таком случае Пользователь обязан
             немедленно прекратить использование Сайта.</p>
-          <h4>3. Права пользователя по защите персональных данных</h4>
-          <p>3.1. В связи с предоставлением Персональных данных Пользователь
+          <h4 class="fade-up">3. Права пользователя по защите персональных данных</h4>
+          <p class="fade-up">3.1. В связи с предоставлением Персональных данных Пользователь
             автоматически получает следующие права:
             (1) получать данные, касающиеся их обработки (основания и цели такой
             обработки, применяемые способы обработки, сведения о лицах, которые
@@ -173,8 +173,8 @@
             Персональных данных.
             (7) реализовывать иные права в области защиты персональных данных,
             предусмотренные Законом или положениями данной Политики.</p>
-          <h4>6. Принципы обработки персональных данных</h4>
-          <p>6.1. Обработка персональных данных осуществляется на законной и справедливой основе.
+          <h4 class="fade-up">6. Принципы обработки персональных данных</h4>
+          <p class="fade-up">6.1. Обработка персональных данных осуществляется на законной и справедливой основе.
             6.2. Обработка персональных данных ограничивается достижением конкретных, заранее определенных и законных
             целей. Не
             допускается обработка персональных данных, несовместимая с целями сбора персональных данных.
@@ -203,8 +203,8 @@
             обработки
             или в случае утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом.
           </p>
-          <h4>4. ПЕРЕЧЕНЬ СОБИРАЕМЫХ ПЕРСОНАЛЬНЫХ ДАННЫХ</h4>
-          <p>4.1.Неперсонифицированная информация о пользователях
+          <h4 class="fade-up">4. ПЕРЕЧЕНЬ СОБИРАЕМЫХ ПЕРСОНАЛЬНЫХ ДАННЫХ</h4>
+          <p class="fade-up">4.1.Неперсонифицированная информация о пользователях
             В связи с использованием Сайта Правообладатель может автоматически
             собирать и обрабатывать следующею неперсонифицированную информацию
             о Пользователе:
@@ -251,8 +251,8 @@
             Файлов куки нужно выполнить следующие действия:
             Зайти на устройство браузер, и в настройках -конфигурация отключить
             данную функцию.</p>
-          <h4>5. ЦЕЛИ СБОРА И ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ</h4>
-          <p>5.1. Определение целей обработки
+          <h4 class="fade-up">5. ЦЕЛИ СБОРА И ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ</h4>
+          <p class="fade-up">5.1. Определение целей обработки
             Сбор и обработка Персональных данных осуществляется в следующих целях:
             (1) для анализа поведения Пользователя, а также выявления
             5/10
@@ -296,8 +296,8 @@
             случаев, когда Пользователь сделал такие данные общедоступными.
             Обработка Персональных данных осуществляется с использованием средств
             автоматизации и без использования таких средств автоматизации.</p>
-          <h4>6. ДОСТУП ТРЕТЬИХ ЛИЦ К ПЕРСОНАЛЬНЫМ ДАННЫМ</h4>
-          <p>6.1.Использование аналитических платформ
+          <h4 class="fade-up">6. ДОСТУП ТРЕТЬИХ ЛИЦ К ПЕРСОНАЛЬНЫМ ДАННЫМ</h4>
+          <p class="fade-up">6.1.Использование аналитических платформ
             Правообладатель использует аналитическую платформу Yandex для(1)
             отслеживания частоты посещаемости сайта Пользователями; и(2)
             отслеживания способов использования Пользователем Сайта и/или его
@@ -335,8 +335,8 @@
             Персональных данных, которые предпринимает сам Правообладатель, и (2)
             согласие на такое раскрытие было предварительно выражено Пользователем
             и/или допускается на основании Закона.</p>
-          <h4>7. РАЗМЕЩЕНИЕ РЕКЛАМЫ</h4>
-          <p>7.1. Реклама на Сайте
+          <h4 class="fade-up">7. РАЗМЕЩЕНИЕ РЕКЛАМЫ</h4>
+          <p class="fade-up">7.1. Реклама на Сайте
             Правообладатель не размещает рекламу на Сайте.
             7. НАПРАВЛЕНИЕ ЖАЛОБ И ЗАПРОСОВ ПРАВООБЛАДАТЕЛЮ
             Требование о прекращении обработки персональных данных
@@ -366,8 +366,8 @@
           <p>8.1.Хранение осуществляется самостоятельно Правообладателем.
             Хранение осуществляется в течение всего срока использования
             Пользователем Сайта.</p>
-          <h4>9. ДОСТУП НЕСОВЕРШЕННОЛЕТНИХ К САЙТУ</h4>
-          <p>9.1.Сайт может быть использовано лицами в возрасте до 18 лет. Поскольку Сайт
+          <h4 class="fade-up">9. ДОСТУП НЕСОВЕРШЕННОЛЕТНИХ К САЙТУ</h4>
+          <p class="fade-up">9.1.Сайт может быть использовано лицами в возрасте до 18 лет. Поскольку Сайт
             не собирает личные данные о Пользователях, согласие на обработку Личных
             данных несовершеннолетних Пользователей не требуется.
             Если несовершеннолетний Пользователь не может предоставить согласие на
@@ -391,8 +391,8 @@
             (4) а также:
             установка пароля; антивирусная программа с обновлением каждые 24
             часа.</p>
-          <h4>11. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</h4>
-          <p>11.1.Доступность текста политики для ознакомления
+          <h4 class="fade-up">11. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</h4>
+          <p class="fade-up">11.1.Доступность текста политики для ознакомления
             Пользователи могут ознакомиться с условиями данной Политики по
             следующей ссылке: https://halal-market.netlify.app/privacy_policy.
             Данная редакция Политики действует от 26 марта 2023 годa.
