--- a/veal-pulp-meat-to-buy-in-pokrov.html
+++ b/veal-pulp-meat-to-buy-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-          <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+          <h1 class="h1 fade-up">Телячья мякоть</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef-knuckle-whole-meat.webp" alt="lamb-back-meat" class="largeImg"
                   id="largeImg" title="Телячья мякоть">
@@ -155,10 +155,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Телячья мякоть</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -191,13 +191,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Болоньез из телятины</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>6 порций</li>
                     <li>Подготовка: 20 минут</li>
                     <li>Приготовление: чуть больше 2 часов </li>
@@ -215,7 +215,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 1 столовую ложку масла в кастрюле на среднем огне. Добавьте лук и готовьте, помешивая, в
                     течение 4 минут или до
                     мягкости. Добавьте фарш и чеснок и готовьте, периодически помешивая, чтобы разбить комки, в течение
@@ -226,7 +226,7 @@
                     1/4 стакана листьев
                     базилика и добавьте в соус болоньезе.
                   </p>
-                  <p>Осторожно поднимите баранину на доску с помощью теплой тарелки и оставьте на 20 минут.
+                  <p class="fade-up">Осторожно поднимите баранину на доску с помощью теплой тарелки и оставьте на 20 минут.
                     Тем временем вылейте
                     большую часть жира из формы и поставьте форму на слабый огонь. Вмешайте муку в жареные овощи и
                     готовьте в течение
@@ -240,7 +240,7 @@
                     подавайте с соусом.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-liver-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -249,7 +249,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Нежность телятины делает ее идеальным мясом для болоньеза.
