--- a/veal_knuckle_halal_meat_in_pokrov.html
+++ b/veal_knuckle_halal_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Рулька Телячья</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
      <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/veal_knuckle_meat2.jpg" alt="veal_knuckle_meat" class="largeImg"
                   id="largeImg" title="Рулька Телячья">
@@ -157,10 +157,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Рулька Телячья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -193,10 +193,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Пармиджана из телятины</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Поместите телятину между двумя листами полиэтиленовой пленки. Отбейте молотком для мяса до толщины 5
                     мм. Телятину
                     разрезать пополам поперек. Слегка обваляйте телятину в муке, стряхнув излишки. Обмакнуть в яйце,
@@ -240,13 +240,13 @@
                     золотистого цвета.
                     Слейте на бумажное полотенце.
                   </p>
-                  <p>Выложите телятину в 2 слоя внахлест на подготовленное блюдо. Сверху посыпьте моцареллой. Выложите
+                  <p class="fade-up">Выложите телятину в 2 слоя внахлест на подготовленное блюдо. Сверху посыпьте моцареллой. Выложите
                     на томатную смесь.
                     Посыпать пармезаном. Слегка сбрызните маслом и выпекайте от 20 до 30 минут или до
                     золотисто-коричневого цвета. Подавать
                     с заправленными листьями салата. Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="veal-pulp-meat-to-buy-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -255,7 +255,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Это классическое итальянское блюдо из телятины с сыром, которое популярно во многих странах мира!
