--- a/veal_ribs_meat_halal_in_pokrov.html
+++ b/veal_ribs_meat_halal_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-             <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+             <h1 class="h1 fade-up">Ребра Телячьи</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/veal_ribs_meat.webp" alt="veal_ribs_meat" class="largeImg" id="largeImg"
                   title="Ребра Телячьи">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Ребра Телячьи</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -189,14 +189,14 @@
         <hr class="hr_thumb_veal_ribs_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
-              <div class=" h3_title">
+            <div class="colHolder">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Оссобуко</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>6 порций</li>
                     <li>Подготовка: 15 минут</li>
                     <li>Приготовление: 2 часа 35 минут </li>
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Замочите белые грибы не менее чем на 15 минут в 200 мл кипящей воды. Не удаляйте мембрану, которая
                     скрепляет телятину, но срежьте все явно жирные или комковатые кусочки. Нагрейте сливочное масло и
                     масло в очень большой огнеупорной сковороде или кастрюле на среднем огне. Когда шипение прекратится,
@@ -233,13 +233,13 @@
                     влагу и сохраните их. Крупно нарежьте белые грибы и добавьте в сотейник вместе с жидкостью для
                     замачивания. Добавьте овощной бульон, затем перемешайте.
                   </p>
-                  <p>Положите телятину обратно в кастрюлю в один слой, накройте крышкой и доведите до кипения. Сразу же
+                  <p class="fade-up">Положите телятину обратно в кастрюлю в один слой, накройте крышкой и доведите до кипения. Сразу же
                     уменьшите огонь и варите на медленном огне в течение 2 часов, переворачивая ломтики телятины
                     наполовину, пока мясо не станет очень мягким. Жидкость должна превратиться в густоватый соус, но
                     если через 1.5 часа она все еще жидкая, снимите крышку наполовину, чтобы она испарилась. Подавайте с
                     зерновым ризотто. Приятного аппетита! </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="lamb_loin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -248,7 +248,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Этот классический рецепт тушеной телятины станет великолепным воскресным обедом в итальянском стиле.
