--- a/veal_shoulder_meat_halal_in_pokrov.html
+++ b/veal_shoulder_meat_halal_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-         <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+         <h1 class="h1 fade-up">Лопатка Телячья</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/veal_shoulder_meat.jpg" alt="veal_shoulder_meat" class="largeImg"
                   id="largeImg" title="Лопатка Телячья">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Лопатка Телячья</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -191,11 +191,11 @@
         <hr class="hr_thumb_veal_shoulder_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
-              <div class=" h3_title">
+            <div class="colHolder">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Бланкет из телятины</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -231,7 +231,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Налейте бульон и вино в большую кастрюлю, затем добавьте все овощи, кроме грибов. Добавьте чеснок и
                     розмарин и доведите до кипения, затем варите без крышки 10 минут. С телятины срезать лишний жир и
                     нарезать крупными кубиками. Добавить в кастрюлю с грибами. Вернуть на огонь, хорошо приправить,
@@ -243,12 +243,12 @@
                     Следите за тем, чтобы не перегреть, иначе смесь свернется. Вмешайте масло, снимите кастрюлю с огня,
                     затем добавьте петрушку, лимонную цедру и сок.
                   </p>
-                  <p>Тем временем отварите тальятелле в соответствии с инструкцией на упаковке — около 3 минут для
+                  <p class="fade-up">Тем временем отварите тальятелле в соответствии с инструкцией на упаковке — около 3 минут для
                     свежих макарон и до 10 минут для сушеных. Слейте воду и перемешайте с небольшим количеством масла.
                     Разделите макароны между шестью подогретыми тарелками. Сверху выложите бланкет из телятины и
                     подавайте. Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef_ribs_halal_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -257,7 +257,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Бланкет - это рагу из телячьего мяса, которое предварительно не обжаривают.
