--- a/veal_steak_boneless_meat_in_pokrov.html
+++ b/veal_steak_boneless_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-      <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+      <h1 class="h1 fade-up">Стейк Телячий</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/veal_steak_boneless_meat.jpg" alt="veal_steak_boneless_meat"
                   class="largeImg" id="largeImg" title="Стейк Телячий">
@@ -157,10 +157,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Стейк Телячий</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -193,10 +193,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Туртьер</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -227,7 +227,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте 1 столовую ложку масла в большой сковороде на среднем огне. Обжаривайте мясо порциями до
                     румяности. Переложите в большую миску и отложите в сторону. Нагрейте оставшееся масло в той же
                     сковороде, затем добавьте лук, морковь, сельдерей и чеснок. Жарить 8-10 минут до мягкости. Добавьте
@@ -242,14 +242,14 @@
                     Наколите дно вилкой, застелите пергаментом и засыпьте фасолью. Выпекать 15 мин. Удалите пергамент и
                     фасоль и запекайте еще 15 минут до золотистого цвета.
                   </p>
-                  <p> Обрежьте края зубчатым ножом и уложите мясную начинку. Смазать немного яйцом края теста, затем
+                  <p class="fade-up"> Обрежьте края зубчатым ножом и уложите мясную начинку. Смазать немного яйцом края теста, затем
                     накрыть сверху слоеным тестом, обрезать края и защипнуть вилкой. Используйте обрезки слоеного теста,
                     чтобы сделать украшения для пирога(по желанию). Смазать еще яйцом и сделать 4-5 отверстий в верхней
                     части. На этом этапе можно заморозить на срок до шести недель. Тщательно разморозьте перед выпечкой.
                     Выпекать при 190С/170С конвекция/газ 5 40-50 мин. Перед подачей дайте отдохнуть 10 минут.
                     Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="veal_ribs_meat_halal_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -258,7 +258,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Попробуйте этот французско-канадский мясной пирог. Вкусное сочетание говядины и телятины в слоеном
