--- a/beef-goulash-halal-meat.html
+++ b/beef-goulash-halal-meat.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-           <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+           <h1 class="h1 fade-up">Гуляш говяжий</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/sauteed-veal-meat.jpg" alt="sauteed-veal-meat" class="largeImg"
                   id="largeImg" title="Гуляш говяжий">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Гуляш говяжий</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -193,7 +193,7 @@
         <hr class="hr_thumb_beef_goulash-halal_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Монгольские фрикадельки из говядины</h3>
               </div>
@@ -220,7 +220,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Поместите говядину, морковь, панировочные сухари, чеснок, имбирь, яйцо и 1 столовую ложку соевого
                     соуса в миску. Чистыми
                     руками перемешайте, пока хорошо не смешано. Сформируйте из столовых ложек смеси шарики, всего их
@@ -231,7 +231,7 @@
                     переворачивая, в течение 5 минут или пока они хорошо не подрумянятся. Приготовьте лапшу, следуя
                     указаниям на упаковке.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Смешайте сахар, хойсин, оставшийся соевый соус и 60 мл (1 ⁄4 стакана) воды в кувшине. Добавьте в
                     сковороду. Уменьшите
                     огонь до минимума. Накройте крышкой и тушите 5 минут. Сверху положите брокколи. Готовьте под крышкой
@@ -241,7 +241,7 @@
                     фрикаделек по сервировочным тарелкам. Посыпать кунжутом. Приятного аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-knuckle-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -250,7 +250,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Приготовьте эти легкие Монгольские фрикадельки из говядины для простого ужина в середине недели.
