--- a/beef_ribs_halal_meat_in_pokrov.html
+++ b/beef_ribs_halal_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-            <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+            <h1 class="h1 fade-up">Ребра Говяжьи</h1>
             <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/beef_ribs_meat.jpg" alt="beef_ribs_meat" class="largeImg" id="largeImg"
                   title="Ребра Говяжьи">
@@ -154,10 +154,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Ребра Говяжьи</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша говядина выращена на траве и на фермах в России.
@@ -192,13 +192,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Быстрое жаркое из говядины</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 05 минут</li>
                     <li>Приготовление: 15 минут </li>
@@ -212,7 +212,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Сбрызните большую сковороду оливковым маслом и нагрейте на сильном огне. Добавьте половину говядины.
                     Обжаривать 2-3
                     минуты или до коричневого цвета. Переложить на тарелку. Повторите с оставшейся говядиной.
@@ -223,13 +223,13 @@
                     соус чили, и 2 ст. л.
                     воды. Жарить, помешивая, 1-2 минуты или пока не прогреется.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Разогрейте рис в микроволновой печи, следуя указаниям на упаковке. По желанию рис можно отварить.
                     Разделите поровну по
                     сервировочным тарелкам. Приятного аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="veal_shoulder_meat_halal_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -238,7 +238,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Это вкусное быстрое жаркое из говядины из 5 ингредиентов — суперлегкий ужин в будний день без суеты!
