--- a/brisket_beef_halal_meat_in_pokrov.html
+++ b/brisket_beef_halal_meat_in_pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-            <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+            <h1 class="h1 fade-up">Грудинка Говяжья</h1>
           <p class="text_dark">
             Говядина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша говядина
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
            <h2 class="h2">Говядина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/brisket_beef_meat.jpg" alt="brisket_beef_meat" class="largeImg"
                   id="largeImg" title="Грудинка Говяжья">
@@ -156,7 +156,7 @@
                 </li>
               </ul>
             </div>
-            <div class="colHolder">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Грудинка Говяжья</h3>
               </div>
@@ -195,10 +195,10 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Суп массаман из говядины</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -220,7 +220,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Нагрейте половину масла в большой кастрюле с толстым дном на среднем огне. Готовьте говядину двумя
                     заходами в течение
                     5–6 минут или пока она полностью не подрумянится. Переложите в миску.
@@ -231,7 +231,7 @@
                     бульон, лавровый лист
                     и корицу. Довести до кипения.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Уменьшите огонь до минимума. Варить, периодически помешивая, 1 час 30 минут. Добавьте картофель.
                     Готовьте под крышкой в
                     ​​течение 30 минут или пока говядина и картофель не станут мягкими.
@@ -251,7 +251,7 @@
             <div class="colHolder one">
               <ul class="ul_with_text">
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Это наивкуснейшее классическое семейное карри из говядины, которое вы обязательно полюбите всей
                     семьёй.
                   </p>
