--- a/chicken-meat-halal-in-pokrov.html
+++ b/chicken-meat-halal-in-pokrov.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-        <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+        <h1 class="h1 fade-up">Курица домашняя</h1>
           <p class="text_dark">
             Курица травяного откорма, на 100% выращенная на местных фермах, высоко ценится за приятный, мягкий вкус.
             Наша курица
@@ -132,11 +132,11 @@
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Курица для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/chicken-homemade-meat.jfif" alt="chicken-homemade-meat" class="largeImg"
                   id="largeImg" title="Курица домашняя">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Курица домашняя</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша курица выращена на траве и на фермах в России.
@@ -191,7 +191,7 @@
         <hr class="hr_thumb_chicken_halal_meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
+            <div class="colHolder fade-up">
               <div class=" h3_title">
                 <h3 class="h3Glow">Куриная путтанеска</h3>
               </div>
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Отварите картофель в большой кастрюле с кипящей подсоленной водой от 12 до 15 минут или пока он не
                     станет мягким.
                     Осушить. Уменьшите огонь до минимума. Верните картофель в кастрюлю. Добавьте масло и молоко. Размять
@@ -235,13 +235,13 @@
                     1/4 стакана воды.
                     Готовьте, периодически помешивая, в течение 5 минут.
                   </p>
-                  <p>
+                  <p class="fade-up">
                     Верните курицу в кастрюлю с оливками. Готовьте, помешивая, в течение 12 минут или пока курица не
                     будет готова, а соус
                     слегка не загустеет. Посыпьте курицу базиликом. Подавайте с картофельным пюре. Приятного аппетита!
                   </p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef-tongue-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -250,7 +250,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Обновленный классический куриный путтанеска станет хитом для всей семьи.
