--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -83,14 +83,14 @@
     <!-- preloader -->
     <!-- main -->
     <main class="main">
-      <div class="title_container">
+      <div class="title_container fade-up">
         <h1 class="h1 privacy">Privacy Policy</h1>
       </div>
       <section class="main_section ">
-        <article class="main_article bg_mask_privacy">
+        <article class="main_article bg_mask_privacy fade-up">
 
           <h4>1. Общие положения и основные термины</h4>
-          <p>Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального
+          <p class="fade-up">Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального
             закона
             от
             27.07.2006. №152-ФЗ «О персональных данных» (далее – Закон о персональных данных) и определяет порядок
@@ -158,8 +158,8 @@
             безвозвратно с невозможностью дальнейшего восстановления содержания персональных данных в информационной
             системе
             персональных данных и (или) уничтожаются материальные носители персональных данных.</p>
-          <h4>3. Основные права и обязанности Оператора</h4>
-          <p>3.1. Оператор имеет право:
+          <h4 class="fade-up">3. Основные права и обязанности Оператора</h4>
+          <p class="fade-up">3.1. Оператор имеет право:
             3.1.1. Получать от субъекта персональных данных достоверные информацию и/или документы, содержащие
             персональные данные;
             3.1.2. В случае отзыва субъектом персональных данных согласия на обработку персональных данных Оператор
@@ -196,8 +196,8 @@
             и
             уничтожить персональные данные в порядке и случаях, предусмотренных Законом о персональных данных;
             3.2.8. Исполнять иные обязанности, предусмотренные Законом о персональных данных.</p>
-          <h4>4. Основные права и обязанности субъектов персональных данных</h4>
-          <p>4.1. Субъекты персональных данных имеют право:
+          <h4 class="fade-up">4. Основные права и обязанности субъектов персональных данных</h4>
+          <p class="fade-up">4.1. Субъекты персональных данных имеют право:
             4.1.1. Получать информацию, касающуюся обработки его персональных данных, за исключением случаев,
             предусмотренных
             федеральными законами. Сведения предоставляются субъекту персональных данных Оператором в доступной форме, и
@@ -276,8 +276,8 @@
             поступления Оператору требования, указанного в п. 5.8.3 настоящей Политики в отношении обработки
             персональных
             данных.</p>
-          <h4>6. Принципы обработки персональных данных</h4>
-          <p>6.1. Обработка персональных данных осуществляется на законной и справедливой основе.
+          <h4 class="fade-up">6. Принципы обработки персональных данных</h4>
+          <p class="fade-up">6.1. Обработка персональных данных осуществляется на законной и справедливой основе.
             6.2. Обработка персональных данных ограничивается достижением конкретных, заранее определенных и законных
             целей. Не
             допускается обработка персональных данных, несовместимая с целями сбора персональных данных.
@@ -306,8 +306,8 @@
             обработки
             или в случае утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом.
           </p>
-          <h4>7. Цели обработки персональных данных</h4>
-          <p>7.1. Цель обработки персональных данных Пользователя:
+          <h4 class="fade-up">7. Цели обработки персональных данных</h4>
+          <p class="fade-up">7.1. Цель обработки персональных данных Пользователя:
             7.1.1. Информирование Пользователя посредством отправки электронных писем;
             7.1.2.Заключение, исполнение и прекращение гражданско-правовых договоров;
             7.1.3. Предоставление доступа Пользователю к сервисам, информации и/или материалам, содержащимся на
@@ -347,8 +347,8 @@
             8.4. Субъект персональных данных самостоятельно принимает решение о предоставлении его персональных данных и
             дает
             согласие свободно, своей волей и в своем интересе.</p>
-          <h4>9. Условия обработки персональных данных</h4>
-          <p>9.1. Обработка персональных данных осуществляется с согласия субъекта персональных данных на обработку его
+          <h4 class="fade-up">9. Условия обработки персональных данных</h4>
+          <p class="fade-up">9.1. Обработка персональных данных осуществляется с согласия субъекта персональных данных на обработку его
             персональных
             данных.
             9.2. Обработка персональных данных необходима для достижения целей, предусмотренных международным договором
@@ -380,8 +380,8 @@
             9.7. Осуществляется обработка персональных данных, подлежащих опубликованию или обязательному раскрытию в
             соответствии с
             федеральным законом (выложен на сайте о работе и подборе персонала ruscred.site).</p>
-          <h4>10. Порядок сбора, хранения, передачи и других видов обработки персональных данных</h4>
-          <p>10.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие
+          <h4 class="fade-up">10. Порядок сбора, хранения, передачи и других видов обработки персональных данных</h4>
+          <p class="fade-up">10.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие
             доступ к
             персональным данным неуполномоченных лиц.
             10.2. Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за
@@ -433,8 +433,8 @@
             истечение срока действия согласия субъекта персональных данных или отзыв согласия субъектом персональных
             данных, а также
             выявление неправомерной обработки персональных данных.</p>
-          <h4>11. Перечень действий, производимых Оператором с полученными персональными данными</h4>
-          <p>11.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение, уточнение (обновление,
+          <h4 class="fade-up">11. Перечень действий, производимых Оператором с полученными персональными данными</h4>
+          <p class="fade-up">11.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение, уточнение (обновление,
             изменение),
             извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование,
             удаление и
@@ -454,14 +454,14 @@
             трансграничную передачу его персональных данных и/или исполнения договора, стороной которого является
             субъект
             персональных данных.</p>
-          <h4>13. Конфиденциальность персональных данных</h4>
-          <p>13.1. Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и
+          <h4 class="fade-up">13. Конфиденциальность персональных данных</h4>
+          <p class="fade-up">13.1. Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и
             не
             распространять персональные данные без согласия субъекта персональных данных, если иное не предусмотрено
             федеральным
             законом.</p>
-          <h4>14. Заключительные положения</h4>
-          <p>14.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его
+          <h4 class="fade-up">14. Заключительные положения</h4>
+          <p class="fade-up">14.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его
             персональных
             данных, обратившись к Оператору с помощью электронной почты.
             ( также подробнее вы можете ознакомиться <a href="terms_of_use.html"
