--- a/pulp-on-the-bone-meat-in-pokrov.html
+++ b/pulp-on-the-bone-meat-in-pokrov.html
@@ -112,8 +112,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-            <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+            <h1 class="h1 fade-up">Баранья Мякоть</h1>
           <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
@@ -133,11 +133,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
             <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/lamb-pulp-on-the-bone-meat.jpg" alt="lamb-pulp-on-the-bone-meat"
                   class="largeImg" id="largeImg" title="Баранья Мякоть На Кости">
@@ -158,10 +158,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Баранья Мякоть На Кости</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша баранина выращена на траве и на фермах в России.
@@ -193,11 +193,11 @@
         <hr class="hr_thumb_lamb-pulp-on-the-bone-meat">
         <section class="container_gallery">
           <div class="flexContainer">
-            <div class="colHolder ">
-              <div class=" h3_title">
+            <div class="colHolder">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Индийская мусака из баранины</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                   <ul class="ulStyle">
@@ -219,7 +219,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Сбрызните баклажаны спреем из оливкового масла. Нагрейте большую сковороду на среднем огне. Готовьте
                     баклажаны партиями
                     по 2-3 минуты с каждой стороны или пока они не станут золотистыми и не станут мягкими. Переложить на
@@ -235,7 +235,7 @@
                     средне-слабого и варите 30 минут, разбивая помидоры деревянной ложкой.
                     подавайте с соусом.
                   </p>
-                  <p>Тем временем растопить сливочное масло в кастрюле на среднем огне до образования пены. Добавьте
+                  <p class="fade-up">Тем временем растопить сливочное масло в кастрюле на среднем огне до образования пены. Добавьте
                     муку и готовьте,
                     помешивая, 1-2 минуты или пока смесь не начнет пузыриться. Снимите с огня. Постепенно вмешайте
                     молоко до однородности.
@@ -251,7 +251,7 @@
                     духовки и оставьте
                     минимум на 20 минут, чтобы остыли. Посыпьте кориандром. Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -260,7 +260,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     Этот вариант любимого всеми греческого блюда обладает всеми восхитительными нотками классического
