--- a/veal-steak-meat-halal.html
+++ b/veal-steak-meat-halal.html
@@ -111,8 +111,8 @@
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div class="container">
-         <h1 class="h1">Мясо-Халяль</h1>
+        <div class="container fade-up">
+         <h1 class="h1 fade-up">Стейк Телячий</h1>
           <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
@@ -132,11 +132,11 @@
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
-          <div class=" h1_title">
+          <div class=" h1_title fade-up">
          <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
-            <div class="colHolder one">
+            <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/veal-steak-halal-meat.jpg" alt="veal-steak-halal-meat" class="largeImg"
                   id="largeImg" title="Стейк Телячий">
@@ -156,10 +156,10 @@
               </ul>
             </div>
             <div class="colHolder">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Стейк Телячий</h3>
               </div>
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p class="pStyle">
                     Наша телятина выращена на траве и на фермах в России.
@@ -192,13 +192,13 @@
         <section class="container_gallery">
           <div class="flexContainer">
             <div class="colHolder ">
-              <div class=" h3_title">
+              <div class=" h3_title fade-up">
                 <h3 class="h3Glow">Шницель из телятины</h3>
               </div>
               <ul class="ul_with_text">
                 <li>
                   <p>
-                  <ul class="ulStyle">
+                  <ul class="ulStyle fade-up">
                     <li>4 порции</li>
                     <li>Подготовка: 5 минут</li>
                     <li>Приготовление: 10 минут </li>
@@ -216,7 +216,7 @@
                   </p>
                 </li>
                 <li>
-                  <p>
+                  <p class="fade-up">
                     Отварите картофель в большой кастрюле с кипящей водой от 5 до 8 минут или пока он не станет мягким.
                     Осушите. Накройте,
                     чтобы согреться.
@@ -231,12 +231,12 @@
                     прижать, чтобы
                     закрепить.
                   </p>
-                  <p>Полейте маслом. Готовьте на гриле от 5 до 7 минут или до светло-золотистого цвета и готовности
+                  <p class="fade-up">Полейте маслом. Готовьте на гриле от 5 до 7 минут или до светло-золотистого цвета и готовности
                     телятины. Аккуратно раздавите картофель вилкой. Смазать сливочным маслом. Подавайте телятину с
                     картофелем и помидорами, посыпав
                     петрушкой. Приятного аппетита!</p>
                 </li>
-                <li>
+                <li class="fade-up">
                   <a href="front-leg-of-lamb-halal-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
@@ -245,7 +245,7 @@
               </ul>
             </div>
             <div class="colHolder one">
-              <ul class="ul_with_text">
+              <ul class="ul_with_text fade-up">
                 <li>
                   <p>
                     У этого блюда есть приятный хруст, чудесный аромат, а также замечательный вкус.
